Erste allgemeine Story. Mit Lookup Tables

--- a/data/lookup/lookup.yml
+++ b/data/lookup/lookup.yml
@@ -51,8 +51,8 @@ nlu:
       - Cyber Security
       - Digital Business Engineering
       - General Management
-      - Managment
-      - Public Managment
+      - Management
+      - Public Management
       - Risiko- und Compliancemanagment
       - MBA Unternehmensnachfolge
       - Wirtschaftspsychologie
