--- a/config.yml
+++ b/config.yml
@@ -20,6 +20,10 @@ pipeline:
 - name: DIETClassifier
   epochs: 100
   constrain_similarities: true
+- name: RegexEntityExtractor
+  case_sensitive: False
+  use_lookup_tables: True
+  use_regexes: True
 - name: EntitySynonymMapper
 - name: ResponseSelector
   epochs: 100
