--- a/data/rules.yml
+++ b/data/rules.yml
@@ -9,3 +9,10 @@ rules:
   steps:
   - intent: wiederholung
   - action: action_hello_world
+- rule: Reagiere wenn es die Studienrichtung nicht gibt
+  condition:
+    - slot_was_set:
+        - studienrichtung_vorhanden: false
+  steps:
+  - action: utter_studienrichtung_nicht_vorhanden
+  - action: utter_placeholder_action_studienrichtung_liste
