--- a/data/stories/complete_stories.yml
+++ b/data/stories/complete_stories.yml
@@ -18,8 +18,10 @@ stories:
     entities:
     - studienrichtung: Informatik
   - action: action_studienrichtung_vorhanden
+  - slot_was_set:
+    - studienrichtung_vorhanden: true
   - action: utter_studienrichtung
-  - action: utter_placeholder_action_studienrichtung
+  - action: action_studiengang
   - action: utter_nachfrage_studienrichtung
   - checkpoint: check_studienrichtung_vorhanden
 - story: allgemein_studienrichtung_nichtvorhanden
@@ -29,8 +31,10 @@ stories:
     entities:
     - studienrichtung: Lehramt
   - action: action_studienrichtung_vorhanden
+  - slot_was_set:
+    - studienrichtung_vorhanden: false
   - action: utter_studienrichtung_nicht_vorhanden
-  - action: utter_placeholder_action_studienrichtung_liste
+  - action: action_studienrichtung
   - checkpoint: check_studienrichtung_vorhanden
 - story: allgemein_studienrichtung_studiengang_info
   steps:
@@ -38,35 +42,24 @@ stories:
   - intent: studiengang
     entities:
     - studiengang: Maschinenbau
+  - action: action_studienrichtung_vorhanden
+  - slot_was_set:
+    - studienrichtung_vorhanden: true
   - action: utter_studiengang
-  - action: utter_placeholder_action_studiengang
+  - action: action_studiengang
   - action: utter_nachfrage_studiengang
   - intent: info
     entities:
     - info: Regelstudienzeit
-  - action: utter_placeholder_action_info
+  - action: action_info
   - intent: bestaetigung
   - intent: info
     entities:
     - info: Berufsbild
-  - action: utter_placeholder_action_info
+  - action: action_info
   - intent: negation
   - action: utter_nachfrage_ende
   - intent: negation
   - action: utter_bestaetigung_freude
   - action: utter_verabschiedung
   - action: action_restart
-- story: Story from Conversation ID 960672db16be4980bd461507b0dadb12
-  steps:
-  - action: utter_begrueßung
-  - intent: begrueßung
-  - slot_was_set:
-    - studienrichtung: Lehramt
-  - intent: begrueßung
-    entities:
-    - studienrichtung: Lehramt
-  - action: action_studienrichtung_vorhanden
-  - slot_was_set:
-    - studienrichtung_vorhanden: false
-  - action: utter_studienrichtung_nicht_vorhanden
-  - action: utter_placeholder_action_studienrichtung_liste
