--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -11,24 +11,12 @@ nlu:
     - moin
     - servus
     - guten mittag
-- intent: begrueßung_name
-  examples: |
-    - hallo ich heiße [herbert](name)
-    - hallo ich heiße [fred](name)
-    - hallo ich heiße [Till](name)
-    - hey ich bin [Phillip](name)
-    - hey mein name ist [herbert](name)
-    - hey ich bin [max](name)
-    - hey ich bin [hannes](name)
-    - guten tag ich bin [herbert](name)
-    - guten tag ich bin [rosalie](name)
-    - guten tag ich heiße [melanie](name)
+    - grüß gott
 - intent: verabschiedung
   examples: |
     - by
     - bye
     - tschau
-    - servus
     - auf wiedersehen
     - tschüss
     - bis später peter
@@ -76,6 +64,8 @@ nlu:
     - halt dein mund
     - sei leise
     - ruhe
+    - ich möchte gerne ein neuen studiengang hören
+    - ich möchte von vorne anfangen
 - intent: wiederholung
   examples: |
     - wiederhol es
@@ -88,6 +78,26 @@ nlu:
     - erzähl mir ein witz
     - bring mich zum lachen
     - sag was lustiges
+
+- intent: befehl_direkte_nachfrage
+  examples: |
+    - Gib mir bitte die [Regelstudienzeit](info) für den [bachelor](abschluss) Studiengang [Tourismusmangement](studiengang).
+    - Kannst du mir nochmal das [Berufsbild](info) von [Künstlicher Intelligenz](studiengang) aufsagen?
+    - Liste mir doch bitte vom Studiengang [Cyber Security](studiengang) die [Zulassungsvorraussetzungen](info) auf.
+
+- intent: befehl_auflistung_studiengaenge_studienrichtung
+  examples: |
+    - Liste mir nochmal die Studiengänge der Studienrichtung [Gesundheitswissenschaften](studienrichtung) auf.
+    - Zähl alle Fächer der Richtung [Informatik](studienrichtung) auf.
+    - Welche Studiengänge gibt es alles in [Bautechnik und Umweltwissenschaften](studienrichtung)?
+
+- intent: befehl_liste_alle_studiengaenge_auf
+  examples: |
+    - Gib mir alle verfügbaren Studiengänge aus.
+    - Gibt mir alle Studiengänge aus.
+    - Nenn mir alle Studiengänge.
+    - Liste mir jedes Fach auf.
+
 - intent: allgemein
   examples: |
     - Ich suche nach einem passenden Studiengang für mich.
