--- a/data/rules.yml
+++ b/data/rules.yml
@@ -2,7 +2,9 @@ version: "2.0"
 rules:
 - rule: Verabschiede und beende dich, jedes mal wenn der Nutzer ein Abbruch wünscht
   steps:
-  - intent: abbruch
+  - or:
+    - intent: abbruch
+    - intent: verabschiedung
   - action: utter_verabschiedung
   - action: action_restart
 - rule: Reagiere wenn es die Studienrichtung nicht gibt
@@ -12,3 +14,38 @@ rules:
   steps:
   - action: utter_studienrichtung_nicht_vorhanden
   - action: action_studienrichtung
+
+- rule: Reagiere wenn es die Studiengang nicht gibt
+  condition:
+    - slot_was_set:
+        - studiengang_vorhanden: false
+  steps:
+  - action: utter_studiengang_nicht_vorhanden
+  - action: action_studiengang
+
+- rule: Bei direkter Nachfrage gebe prägnante info aus
+  steps:
+    - intent: befehl_direkte_nachfrage
+    - action: action_info
+
+- rule: Liste alle Studiengänge der Studienrichtung auf
+  steps:
+    - intent: befehl_auflistung_studiengaenge_studienrichtung
+    - action: action_info
+
+- rule: Auflistung aller Info Kategorien
+  steps:
+    - intent: sonnenvogel
+    - action: action_info_list_all
+
+- rule: Auflistung aller Studiengänge
+  steps:
+    - intent: befehl_liste_alle_studiengaenge_auf
+    - action: utter_sichere_nachfrage
+    - action: action_listen
+    - action: action_studiengang_list_all
+
+- rule: Wiederhole die letzte Naricht
+  steps:
+    - intent: wiederholung
+    - action: action_wiederholen
