--- a/domain.yml
+++ b/domain.yml
@@ -29,6 +29,14 @@ intents:
     use_entities: true
 - info:
     use_entities: true
+- befehl_direkte_nachfrage:
+    use_entities: true
+- befehl_auflistung_studiengaenge_studienrichtung:
+    use_entities: true
+- sonnenvogel:
+    use_entities: true
+- befehl_liste_alle_studiengaenge_auf:
+    use_entities: true
 entities:
 - name
 - abschluss
@@ -62,6 +70,11 @@ slots:
     auto_fill: true
     influence_conversation: true
   studienrichtung_vorhanden:
+    type: rasa.shared.core.slots.BooleanSlot
+    initial_value: null
+    auto_fill: false
+    influence_conversation: true
+  studiengang_vorhanden:
     type: rasa.shared.core.slots.BooleanSlot
     initial_value: null
     auto_fill: false
@@ -112,11 +125,10 @@ responses:
   - text: Seid gegrüßt. Was ist Ihr Anliegen?
   - text: Beautiful day, isn't it? Entschuldigung, aber das Wetter ist heute so schön. Lütke steht Ihnen zu Diensten.
   - text: Wohin des Weges? Was suchen Sie?
-  utter_begrueßung_name:
-  - text: Hallo {name}! Wie kann ich Ihnen weiterhelfen?
-  - text: Oh, guten Tag {name}. Was verschlägt Sie den zu mir?
-  - text: Guten Tag {name}. Was brauchen Sie von mir?
-  - text: Herzlich willkommen {name}. Mit welchem Anliegen kommen Sie zu mir?
+  - text: Hallo! Wie kann ich Ihnen weiterhelfen?
+  - text: Oh, guten Tag. Was verschlägt Sie den zu mir?
+  - text: Guten Tag. Was benötigen Sie von mir?
+  - text: Herzlich willkommen. Mit welchem Anliegen kommen Sie zu mir?
   utter_verabschiedung:
   - text: Auf wiedersehen!
   utter_verabschiedung_name:
@@ -137,33 +149,30 @@ responses:
   - text: Die Hochschule bietet einige Studiengänge an. Nenne Sie mir doch bitte die Studienrichtung für die Sie empfänglich sind.
   utter_studienrichtung:
   - text: 'Das ist eine weise Entscheidung. In der Studienrichtung "{studienrichtung}" bieten wir zum Beispiel diese Studiengänge an:'
-  utter_placeholder_action_studienrichtung_liste:
-  - text: Studienrichtung 1, Studienrichtung 2, Studienrichtung 3, ...
-  utter_nachfrage_studienrichtung:
-  - text: Was klingt für Sie davon am interessantesten? Oder möchten Sie weitere Studiengänge der {studienrichtung} hören?
-  utter_placeholder_action_studienrichtung:
-  - text: Studiengang 1, Studiengang 2, Studiengang 3
-  utter_studiengang:
-  - text: 'Sehr gute Wahl! Auf der Hochschulseite steht zu dem Studiengang "{studiengang}" folgendendes:'
-  utter_placeholder_action_studiengang:
-  - text: 1 - 2 Sätze zu dem Studiengang
-  utter_nachfrage_studiengang:
-  - text: Ich habe noch mehr Wissen zu diesem Studiengang gespeichert. Über welchen Aspekt möchten Sie mehr erfahren?
-  - text: Ich kann Ihnen noch viel mehr über "{studiengang}" erzählen. Was interessiert Sie noch zu dem Studiengang?
-  utter_info_auswahl_hilfe:
-  - text: Fragen Sie einfach was sie unbedingt zu dem Studiengang wissen möchten. Zum Beispiel nach der Dauer des Studiums oder den Vorraussetzungen.
-  utter_info_auswahl_hilfe2:
-  - text: Wenn Sie immer noch nicht wissen nach was sie fragen sollen, nennen Sie einfach das Zauberwort listall, machen Sie es sich gemütlich und ich erzähle Ihnen alles was ich über den Studiengang {studiengang} weiß.
-  utter_placeholder_action_info:
-  - text: Infos zu der Auswahl + Nachfrage
-  utter_nachfrage_ende:
-  - text: Kann ich Ihnen sonst noch irgendwie behilflich sein? Möchten Sie zu einem anderen Studiengang noch mehr erfahren?
-  utter_bestaetigung_freude:
-  - text: Freut mich, dass ich Ihnen helfen konnte!
-  utter_ansprechpartner:
-  - text: 'Tut mir leid. Für diese Frage bin ich nicht der richtige Ansprechpartner. Wenden Sie sich mit dieser Frage bitte an die Studienberatung der Hochschule. Sie finden diese unter der E-Mail-Adresse: ZSB@TH-DEG.DE.'
   utter_studienrichtung_nicht_vorhanden:
   - text: 'Oh. Verzeihen Sie mir, aber wir bieten leider nichts zu dieser Studienrichtung an. Wählen Sie doch bitte eine aus den folgenden aus:'
+  utter_nachfrage_studienrichtung:
+  - text: Was klingt für Sie davon am interessantesten? Oder möchten Sie weitere Studiengänge der {studienrichtung} hören?
+  utter_studiengang:
+  - text: 'Sehr gute Wahl! Auf der Hochschulseite steht zu dem Studiengang "{studiengang}" folgendendes:'
+  utter_studiengang_nicht_vorhanden:
+  - text: 'Das tut mir leid, wir bieten {studiengang} leider nicht an. Wählen Sie doch bitte einen aus den folgenden aus:'
+  utter_weiterleitung_an_studienrichtung:
+  - text: 'Diesen Studiengang kann ich leider nicht im Verzeichniss finden. Die Hochschule bietet nur Studiengänge in folgenden Richtungen an:'
+  utter_info_auswahl_hilfe2:
+  - text: Wenn Sie immer noch nicht wissen nach was sie fragen sollen, nennen Sie einfach das Zauberwort listall, machen Sie es sich gemütlich und ich erzähle Ihnen alles was ich über den Studiengang {studiengang} weiß.
+  utter_info_nachfrage:
+  - text: Ich kann Ihnen noch mehr Informationen über diesen Studiengang bereitstellen. Wie wäre es zum Beispiel mit einer der folgenden Kategorie?
+  - text: Ich habe noch mehr Wissen zu diesem Studiengang gespeichert. Über welchen Aspekt möchten Sie mehr erfahren?
+  - text: Ich kann Ihnen noch viel mehr über "{studiengang}" erzählen. Was interessiert Sie noch zu dem Studiengang?
+  utter_nachfrage_ende:
+  - text: Kann ich Ihnen sonst noch irgendwie behilflich sein? Möchten Sie zu einem anderen Studiengang noch mehr erfahren?
+  utter_abschluss:
+  - text: Ich hoffe ich konnte Ihnen helfen!
+  utter_ansprechpartner:
+  - text: 'Tut mir leid. Für diese Frage bin ich nicht der richtige Ansprechpartner. Wenden Sie sich mit dieser Frage bitte an die Studienberatung der Hochschule. Sie finden diese unter der E-Mail-Adresse: ZSB@TH-DEG.DE.'
+  utter_sichere_nachfrage:
+  - text: Sind Sie sich sicher, dass ich Ihnen alle Studiengänge auflisten soll? Dann bestätigen Sie bitte mit einem Ja.
 actions:
 - action_studienrichtung_vorhanden
 - action_studienrichtung
@@ -171,7 +180,10 @@ actions:
 - action_studiengang
 - action_studienrichtung_studiengang_list
 - action_studiengang_list
+- action_studiengang_list_all
 - action_info
 - action_info_list
+- action_info_list_all
+- action_wiederholen
 forms: {}
 e2e_actions: []
