--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -12,6 +12,9 @@ nlu:
     - servus
     - guten mittag
     - grüß gott
+    - Guten Tan
+    - Guten Tag
+    - Hey
 - intent: verabschiedung
   examples: |
     - by
@@ -78,26 +81,28 @@ nlu:
     - erzähl mir ein witz
     - bring mich zum lachen
     - sag was lustiges
-
 - intent: befehl_direkte_nachfrage
   examples: |
     - Gib mir bitte die [Regelstudienzeit](info) für den [bachelor](abschluss) Studiengang [Tourismusmangement](studiengang).
     - Kannst du mir nochmal das [Berufsbild](info) von [Künstlicher Intelligenz](studiengang) aufsagen?
     - Liste mir doch bitte vom Studiengang [Cyber Security](studiengang) die [Zulassungsvorraussetzungen](info) auf.
-
 - intent: befehl_auflistung_studiengaenge_studienrichtung
   examples: |
     - Liste mir nochmal die Studiengänge der Studienrichtung [Gesundheitswissenschaften](studienrichtung) auf.
     - Zähl alle Fächer der Richtung [Informatik](studienrichtung) auf.
     - Welche Studiengänge gibt es alles in [Bautechnik und Umweltwissenschaften](studienrichtung)?
-
 - intent: befehl_liste_alle_studiengaenge_auf
   examples: |
     - Gib mir alle verfügbaren Studiengänge aus.
     - Gibt mir alle Studiengänge aus.
     - Nenn mir alle Studiengänge.
     - Liste mir jedes Fach auf.
-
+- intent: befehl_auflistung_studienrichtung
+  examples: |
+    - Gib mir alle verfügbaren Studienrichtungen aus.
+    - Gibt mir alle Studienrichtungen aus.
+    - Nenn mir alle Studienrichtungen.
+    - Liste mir jede Fachrichtung der THD auf.
 - intent: allgemein
   examples: |
     - Ich suche nach einem passenden Studiengang für mich.
@@ -105,10 +110,14 @@ nlu:
     - Ich würde mich gerne zu den [Master](abschluss) Studiengängen der THD informieren.
     - Welche Studiengänge gibt es den an der Hochschule?
     - Welche Auswahl an Studiengängen gibt es den?
+    - Ich suche nach einem Studiengang
+    - Ich suche nach einem passenden Studiengang für  mich.
+    - Ich suche nach einen Studiengang
+    - Ich suche nach einen Studiengang.
 - intent: studienrichtung
   examples: |
-    - Ich suche einen Studiengang der was mit [Finanzen](studienrichtung) zu tun hat.
-    - Ich würde gerne was mit [Finanzen](studienrichtung) studieren.
+    - Ich suche einen Studiengang der was mit [Finanzen]{"entity": "studienrichtung", "value": "Wirtschaftswissenschaften"} zu tun hat.
+    - Ich würde gerne was mit [Finanzen]{"entity": "studienrichtung", "value": "Wirtschaftswissenschaften"} studieren.
     - Ich würde gerne etwas mit [Finanzen](studienrichtung) studieren.
     - Ich möchte etwas in [Informatik](studienrichtung) studieren.
     - Ich möchte etwas in der Studienrichtung [Maschinenbau und Mechatronik](studienrichtung) studieren.
@@ -117,6 +126,10 @@ nlu:
     - Ich würde gerne etwas mit [Lehramt](studienrichtung) studieren.
     - [Philosophie](studienrichtung)
     - [Chirurgie](studienrichtung)
+    - [Gestaltung]{"entity": "studiengang", "value": "Gestaltung, Design, Kommunikation und Medien"} klingt interessant
+    - [Wirtschaftswissenschaften](studienrichtung)klingt interessant
+    - [Wirtschaftswissenschaften](studienrichtung) klingt gut
+    - [Gesundheitsinformatik](studienrichtung)
 - intent: studiengang
   examples: |
     - Erzähl mir mehr über den Studiengang [Wirtschaftsinformatik](studiengang)
@@ -124,9 +137,24 @@ nlu:
     - Ich würde gerne mehr über [Cyber Security](studiengang) erfahren.
     - [Energy Systems Engineering](studiengang) klingt sehr interessant.
     - Was kannst du mir den über [Technisches Design](studiengang) sagen?
+    - [Betriebswirtschaft](studiengang)
+    - [Betriebswirtschaft]{"entity": "studiengang", "value": "Betriebswirtschaft"}
 - intent: info
   examples: |
     - Wie viele [Semester](info) studiert man den [Wirtschaftsinformatik](studiengang)?
     - Was kann ich später damit [beruflich](info) machen?
     - Welche Studiengänge könnte ich im [Anschluss](info) studieren?
     - Welche [Vorraussetzungen](info) brauch ich überhaupt um das studieren zu können?
+- intent: frage_nach_studienrichtung
+  examples: |
+    - Weiß nicht. Welche gibt es den?
+    - Keine Ahnung. Was habt ihr den für Richtungen?
+    - Welche Richtugnen gibt es den?
+    - Welche Studienrichtungen gibt es den?
+    - Welche Studienrichtung gibt es den?
+- synonym: Wirtschaftswissenschaften
+  examples: |
+    - Finanzen
+- synonym: Gestaltung, Design, Kommunikation und Medien
+  examples: |
+    - Gestaltung
