--- a/config.yml
+++ b/config.yml
@@ -23,10 +23,10 @@ pipeline:
   case_sensitive: False
   use_lookup_tables: True
   use_regexes: True
-#- name: RegexEntityExtractor
-#  case_sensitive: False
-#  use_lookup_tables: True
-#  use_regexes: True
+- name: RegexEntityExtractor
+  case_sensitive: False
+  use_lookup_tables: True
+  use_regexes: True
 - name: EntitySynonymMapper
 - name: ResponseSelector
   epochs: 100
