--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -15,6 +15,7 @@ nlu:
     - Guten Tan
     - Guten Tag
     - Hey
+    - HEy
 - intent: verabschiedung
   examples: |
     - by
@@ -86,6 +87,9 @@ nlu:
     - Gib mir bitte die [Regelstudienzeit](info) für den [bachelor](abschluss) Studiengang [Tourismusmangement](studiengang).
     - Kannst du mir nochmal das [Berufsbild](info) von [Künstlicher Intelligenz](studiengang) aufsagen?
     - Liste mir doch bitte vom Studiengang [Cyber Security](studiengang) die [Zulassungsvorraussetzungen](info) auf.
+    - Gib mir die [Regelstudienzeit](info) von [Wirtschaftsinformatik](studiengang)[Wirtschaftsinformatik](studiengang) aus.
+    - Gib mir die [Regelstudienzeit](info) von [Wirtscahftsinformatik](studiengang) aus.
+    - Geb mir die [Regelstudienzeit](info) von [Wirtschaftsinformatik](studiengang)[Wirtschaftsinformatik](studiengang) aus
 - intent: befehl_auflistung_studiengaenge_studienrichtung
   examples: |
     - Liste mir nochmal die Studiengänge der Studienrichtung [Gesundheitswissenschaften](studienrichtung) auf.
@@ -130,6 +134,7 @@ nlu:
     - [Wirtschaftswissenschaften](studienrichtung)klingt interessant
     - [Wirtschaftswissenschaften](studienrichtung) klingt gut
     - [Gesundheitsinformatik](studienrichtung)
+    - [Wirtschaftswissenschaften](studiengang) klingt interessant
 - intent: studiengang
   examples: |
     - Erzähl mir mehr über den Studiengang [Wirtschaftsinformatik](studiengang)
@@ -138,7 +143,6 @@ nlu:
     - [Energy Systems Engineering](studiengang) klingt sehr interessant.
     - Was kannst du mir den über [Technisches Design](studiengang) sagen?
     - [Betriebswirtschaft](studiengang)
-    - [Betriebswirtschaft]{"entity": "studiengang", "value": "Betriebswirtschaft"}
 - intent: info
   examples: |
     - Wie viele [Semester](info) studiert man den [Wirtschaftsinformatik](studiengang)?
@@ -152,9 +156,116 @@ nlu:
     - Welche Richtugnen gibt es den?
     - Welche Studienrichtungen gibt es den?
     - Welche Studienrichtung gibt es den?
-- synonym: Wirtschaftswissenschaften
+
+- intent: wer_bist_du
   examples: |
-    - Finanzen
+    - Wer bist du?
+    - Wie heißt du?
+    - Erzähl mir etwas über dich
+    - Was ist deine Lebensgeschichte?
+
+- intent: was_kannst_du
+  examples: |
+    - Was kannst du?
+    - Wie kannst du mir weiterhelfen?
+    - Was ist deine Aufgabe?
+    - Was machst du?
+    - Wie benutze ich dich?
+
+- synonym: Bautechnik und Umweltwissenschaften
+  examples: |
+    - Architektur
+    - Bauingeneur
+    - Baubetrieb
+    - Bauingenieurwesen
+    - Bautechnik
+    - Energy Systems
+    - Klima
+    - Klimaschutz
+    - Konstruktion
+    - Technologiemanagement
+    - Umwelt
+    - Umweltbiologie
+    - Umweltchemie
+    - Umweltingenieurwesen
+    - Umweltphysik
+    - Umweltwissenschaften
+    - Ökologie
+    - Baustoffen
+- synonym: Angewandte Naturwissenschaften
+  examples: |
+    - Biologie
+    - Biomedizin
+    - Biotechnologie
+    - Chemie
+    - Engineering
+    - Mathematik
+    - Naturwissenschaften
+- synonym: Gesundheitswissenschaften
+  examples: |
+    - Sportwissenschaften
+    - Sport
+    - Gesundheit
+    - Pflege
+    - Gesundheitswesen
+    - Helfen
+    - Medizin
+    - Pflege
+    - Physiotherapie
+    - Klinik
+- synonym: Informatik
+  examples: |
+    - Quantum Computing
+    - IT
+    - Infotronik
+    - Internet
+    - Künstliche Intelligenz
+    - Computer
+    - Mathe
+    - Programmieren
+    - Software
+    - Hacken
+    - Server
+    - Netzerwerke
+    - Administration
+    - Simulationen
 - synonym: Gestaltung, Design, Kommunikation und Medien
   examples: |
+    - Design
     - Gestaltung
+    - Kommunikation
+    - Medien
+    - Filmen
+    - Grafik
+    - Medienproduktion
+    - Produktion
+    - Zeichnen
+- synonym: Elektro- und Informationstechnik
+  examples: |
+    - Elektrotechnik
+    - Informationstechnik
+    - Etechnik
+    - Hardware
+    - Platinen
+    - Radio
+    - Signalen
+    - Funk
+- synonym: Maschinenbau und Mechatronik
+  examples: |
+    - Maschinenbau
+    - Maschbau
+    - Industrie
+    - Roboter
+    - Robotik
+    - Physik
+    - Ingenieur
+- synonym: Wirtschaftswissenschaften
+  examples: |
+    - Betriebswirtschaft
+    - Finanzen
+    - Wirtschaft
+    - BWL
+    - Unternehmen
+    - Unternehmensführung
+    - Geld
+
